--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "firebase": "^7.5.2",
+    "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -35,7 +36,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-airbnb-base": "^14.0.0",
-    "node-sass": "^4.13.0"
+    "eslint-config-airbnb-base": "^14.0.0"
   }
 }
